misc fixes to make the ant task work better